fixed a couple of small things. All of the CSS is now merged into main-master.css. We haven't had any overlaps so far! Try to use classes or IDs to keep our common elements seperate. Fixed #15

--- a/business-sinatra/public/james.css
+++ b/business-sinatra/public/james.css
@@ -1,5 +1,6 @@
 body {
 	background-color: #fff;
+	color: #333333;
 	font-family: 'Droid Sans', sans-serif;
 }
 
